# sensor

./: CMakeLists.txt  Compass.qml  Main.qml  README.md  RunningView.qml  SensorFactor.h  SensorInfo.qml  back.qml  compass.cpp  compass.h  config.ini  depth.cpp  depth.h  device.cpp  device.h  main.cpp  manager.cpp  manager.h  posture.cpp  posture.h  rec.qml  sensor.qml  sensorfactory.cpp  sensorfactory.h  sensorreleasetask.cpp  sensorreleasetask.h
